test/tests/stages/18_structures/valid/extra_credit/semantic_analysis/cast_union_to_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  union
  identifier(u)
  {
  long
  identifier(l)
  ;
  double
  identifier(d)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(x)
  =
  {
  const int(1000)
  }
  ;
  (
  void
  )
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
