test/tests/stages/18_structures/invalid_types/extra_credit/union_type_declarations/union_self_reference.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  union
  identifier(u)
  {
  int
  identifier(i)
  ;
  union
  identifier(u)
  identifier(self)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
